Fixing: Alumni Hub spacing in mobile; overlapping space of View More button on Topic pages; subscribe spacing in mobile

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -12685,8 +12685,8 @@ a[href*="http"] .remove-ext-url .article-header__date {
 
 .magazine__subscribe-movable {
   background-color: #f2f4f6;
-  padding: 40px 80px;
-  margin: 80px 0; }
+  padding: 40px;
+  margin: 40px 0; }
   @media (min-width: 769px) {
     .magazine__subscribe-movable {
       padding: 40px 80px; } }
@@ -13682,10 +13682,15 @@ body.page-node-type-magazine-homepage,
         letter-spacing: -0.3px; } }
   body.page-node-type-magazine-homepage .magazine-alumni .card-row__copy,
   .magazine-topic-issue-page .magazine-alumni .card-row__copy {
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 0;
+    padding-left: 0;
     float: none;
     width: 100%; }
+    @media (min-width: 769px) {
+      body.page-node-type-magazine-homepage .magazine-alumni .card-row__copy,
+      .magazine-topic-issue-page .magazine-alumni .card-row__copy {
+        padding-right: 20px;
+        padding-left: 20px; } }
     @media (min-width: 850px) {
       body.page-node-type-magazine-homepage .magazine-alumni .card-row__copy,
       .magazine-topic-issue-page .magazine-alumni .card-row__copy {
@@ -14411,9 +14416,6 @@ body.page-node-type-magazine-homepage .layout-panel {
   .magazine-topic-footer-ctas-wrapper h2,
   .magazine-topic-issue-ctas-wrapper h2 {
     color: #121a31; }
-
-.footer-ctas-wrapper {
-  margin-top: -2rem; }
 
 @media (min-width: 769px) {
   .magazine-topic-page .magazine-hub-inside {
